tests/semantica/valid/metodos/test3.ctds
program 
	{
        integer x = 2;
        integer y = 4;

        integer foo(integer x, integer y){
            if(x < y) then {
                foo(x + 2, y);
            }

            while(x > y) {
                x = x - 1;
            }

            return x;
        }

        void main(){
            integer x = foo(x, y);

            return;
        }
    }