tests/semantica/invalid/metodos/test7.ctds
program
	{
		
		integer foo(integer x, integer y){
			return x + y;
		}

		void main(){
			foo(2);
		}
	}